--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 html {
   box-sizing: border-box;
   background-color: #EBF4F4;
+  cursor: url('../images/icons8-3d-pointer-30.png'), auto;
 }
 
 *, *:before, *:after {
@@ -40,10 +41,10 @@ h3 {
   background-color: #1F2833 ;
   display: flex;
   align-items: center;
-  justify-content:center;
+  justify-content: center;
   height: 3.5625rem;
   width: 100%;
-  position: fixed
+  position: fixed;
 }
 
 .nav ul {
@@ -69,12 +70,10 @@ h3 {
 
 /* HOME PAGE CSS */
 
-.hub {
-  display: grid;
-}
-
 video.fullscreen {
-	top:0;
+  position: relative;
+  top: 57px;
+  display: grid;
 	width: 100%;
 	background-color: #EBF4F4;
 	object-fit: cover;
@@ -82,10 +81,8 @@ video.fullscreen {
 
 .me {
   position: absolute;
-  top:25rem;
-  left: 33rem;
+  inset: 25rem;
   text-align: center;
-  
 }
  
 .bioSection {
@@ -118,7 +115,7 @@ video.fullscreen {
 
 .tileStack {
   display: grid;
-  margin: 8rem 10rem 10rem 6rem;
+  margin: 8rem 10rem 5rem 6rem;
 }
 
 .about h4 {
@@ -149,18 +146,36 @@ form {
   font-weight: 400;
   font-size: 3.125rem;
   letter-spacing: 0.46875rem;
+}
+
+.formColumn a {
+  text-decoration: none;
   color: #EBF4F4;
 }
 
-.icons {
+.formColumn a:hover {
+  text-decoration: none;
+  color: #5BABA9;
+}
+svg {
   height: 59px;
   position: relative;
   top: .8rem;
+  fill: #EBF4F4;
 
 }
 
-label {
+svg:hover {
+  fill: #5BABA9;
+}
 
+label {
+  color: #EBF4F4;
+  font-family: komet, sans-serif;
+  font-size: 2.5rem;
+  font-style: normal;
+  font-weight: 600;
+  letter-spacing: 0.375rem;
 }
 
 input[type=text] {
@@ -169,13 +184,39 @@ input[type=text] {
 
 input {
   padding: 1rem;
-  font-size: 1.875rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
   border-radius: 0.625rem;
   width: 100%;
   height: 4.3125rem;
+  font-family: komet, sans-serif;
+  font-size: 1.875rem;
+  font-weight: 500;
 }
 
+textarea {
+  padding: 1rem;
+  width: 100%;
+  height: 28rem;
+  border-radius: 0.625rem;
+  font-family: komet, sans-serif;
+  font-size: 1.875rem;
+  font-weight: 500;
+}
+
+.submit {
+  width: 6rem;
+  height: 3.125rem;
+  flex-shrink: 0;
+  border-radius: 0.625rem;
+  background: #EBF4F4;
+  margin-left: 45rem;
+  color: rgba(0, 0, 0, 0.33);
+  font-family: komet-sc, sans-serif;
+  font-size: 1.25rem;
+  font-weight: 300;
+  cursor: pointer;
+}
 /* PROCESS PAGE CSS */
 
 .largerSize {
@@ -185,16 +226,6 @@ input {
 	background-color: #EBF4F4;
 	object-fit: cover;
 }
-
-
-
-/* Name and Bio 
-.me {
-  position: absolute;
-  align-items: center;
-  margin: 15rem;
-}
-*/
 
 .projectColumn {
   display: grid;
