--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,27 @@ h4 {
   margin: 0 0 2rem 0;
 }
 
+/* LINKS */
+
+a {
+  color: #EBF4F4;
+}
+
 a:visited {
   color: #1F2833;
+}
+
+a:hover {
+  color: #5BABA9;
+}
+
+a:active {
+  color: #5BABA9
+}
+
+a:focus {
+  color: #5BABA9;
+  font-weight: bold;
 }
 /* NAVIGATION */
 
@@ -105,6 +124,7 @@ video.fullscreen {
 
 .me a {
   text-decoration: none;
+  color: #1F2833;
 }
 
 .firstandlast, .designer {
@@ -275,7 +295,7 @@ textarea {
   background: #EBF4F4;
   margin: .5rem 0 0 45rem;
   text-align: center;
-  color: rgba(0, 0, 0, 0.33);
+  color: #1F2833;
   font-family: komet-sc, sans-serif;
   font-size: 1.25rem;
   font-weight: 300;
@@ -441,14 +461,14 @@ right: 40rem;
   margin-bottom: 2rem;
 }
 
-.carousel h1 {
+.carousel h2 {
   color: rgb(31, 40, 51, 0.5);
   text-align: center;
   margin-bottom: 2rem;
 
 }
 
-.carouselV2 h1 {
+.carouselV2 h2 {
   color: rgb(31, 40, 51, 0.5);
   text-align: center;
   margin: 2rem 0;
@@ -496,7 +516,7 @@ right: 40rem;
   background-color: #1F2833;
 }
 
-.cardtitle h4 {
+.cardtitle p {
   display: flex;
   align-items: center;
   color: #EBF4F4;
@@ -507,7 +527,7 @@ right: 40rem;
   transition: 0.3s ease;
 }
 
-.cardtitle h4:hover {
+.cardtitle p:hover {
   font-size: 2.6rem;
   transform: scale(1);
 }
@@ -705,7 +725,7 @@ letter-spacing: .2rem;
 .return {
   position: absolute;
   inset: 0;
-  margin: 3rem 0rem 0rem 49rem;
+  margin: 3rem 0rem 0rem 51rem;
   width: 4rem;
   height: 4rem;
   transform: rotate(90deg);
