--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ html {
   font-style: normal;
   font-weight: 100;
 }
+
 body {
   font-family: komet, sans-serif;
   font-size: 1.875rem;
@@ -69,6 +70,7 @@ a:focus {
   color: #5BABA9;
   font-weight: bold;
 }
+
 /* NAVIGATION */
 
 .header {
@@ -99,7 +101,7 @@ a:focus {
 }
 
 .nav a:hover {
-  transform: scale(2rem);
+  transform: scale(2);
   font-family: sketchy;
   font-size: 2rem;
   color: #5BABA9;
@@ -144,7 +146,6 @@ video.fullscreen {
   height: 30rem;
 }
 
-
 :focus {
   outline: solid #5BABA9;
 }
@@ -152,7 +153,7 @@ video.fullscreen {
 .leftArrow {
   width: 1.5rem;
   height: 1.5rem;
-  margin: 0rem;
+  margin: 0;
 }
 
 .downArrow {
@@ -166,7 +167,7 @@ video.fullscreen {
   width: 1.5rem;
   height: 1.5rem;
   transform: rotate(180deg);
-  margin: 0rem 0rem 0rem 30rem;
+  margin: 0 0 0 30rem;
 }
 
 .bioSection {
@@ -236,9 +237,10 @@ form {
 .formColumn a:hover {
   text-decoration: none;
   color: #EBF4F4;
-  transform: scale(6rem);
+  transform: scale(6);
   font-size: 2.5rem;
 }
+
 svg {
   height: 30px;
   position: relative;
@@ -255,6 +257,7 @@ svg:hover {
 .workwithme {
   margin-bottom: 2rem;
 }
+
 label {
   color: #EBF4F4;
   font-family: komet, sans-serif;
@@ -262,10 +265,6 @@ label {
   font-style: normal;
   font-weight: 600;
   letter-spacing: 0.375rem;
-}
-
-input[type=text] {
-  margin:rem;
 }
 
 input {
@@ -328,7 +327,6 @@ margin-top: 19rem;
 
 .mainProcess {
   background-color: #f3f3f3;
-  transform: scale(2rem);
 }
 
 .processShowcase {
@@ -354,7 +352,7 @@ margin-top: 19rem;
   position: absolute;
   width: 1.8rem;
   height: 1.8rem;
-  margin: 24.8rem 0 0 0rem;
+  margin: 24.8rem 0 0 0;
   inset: 3rem;
 }
 
@@ -412,6 +410,7 @@ margin-top: 19rem;
   transform: rotate(270deg);
   height: 1.20rem;
 }
+
 /* DESIGN PAGE CSS */
 
 .designrightArrow {
@@ -435,14 +434,9 @@ margin-top: 19rem;
   animation: fadeIn 1.5s;
 }
 
-@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
-}
-
 .designvideo1 {
   top: 10rem;
-right: 40rem;
+  right: 40rem;
   position: absolute;
 	width: 100%;
   height: 40rem;
@@ -548,6 +542,7 @@ right: 40rem;
   font-size: 2.6rem;
   transform: scale(1);
 }
+
 .cardtitle a {
   color: #EBF4F4;
   text-decoration: none;
@@ -588,7 +583,7 @@ right: 40rem;
   display: inline-block;
   width: 1.5rem;
   height: 1.5rem;
-  margin: 0 0rem;
+  margin: 0;
   background-color: #EBF4F4;
   border-radius: 1rem;
   opacity: 20%;
@@ -599,6 +594,7 @@ li.active {
  opacity: 1;
  background-color: #5BABA9;
 }
+
  /* CAROUSEL IMAGES */
 
 .horizontalThumbnail {
@@ -612,7 +608,6 @@ li.active {
   height: 32.5rem;
   transform: scale(1);
 }
-
 
 /* SCREENPRINT PAGE */
 
@@ -647,11 +642,12 @@ letter-spacing: .2rem;
 .nextbar a:hover {
   color: #5BABA9;
   font-size: 3.2rem
-  }
-  .nextbar a {
+}
+
+.nextbar a {
     text-decoration: none;
     color: #EBF4F4;
-  }
+ }
 
 .casestudyGrid {
   display: grid;
@@ -694,7 +690,6 @@ letter-spacing: .2rem;
   margin: 8rem 2.5rem 5rem 2.5rem;
   height: 43rem;
   animation: fadeIn 3s;
-
 }
 
 .partofitGrid {
@@ -741,12 +736,20 @@ letter-spacing: .2rem;
   color: #EBF4F4;
   padding: 15rem;
 }
+
 .return {
   position: absolute;
   inset: 0;
-  margin: 3rem 0rem 0rem 51rem;
+  margin: 3rem 0 0 51rem;
   width: 4rem;
   height: 4rem;
   transform: rotate(90deg);
   mix-blend-mode: luminosity;
+}
+
+/* KEYFRAMES */ 
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
