Final late night edits!
I think I'm done, its been a wild journey and i'm so excited to use these skills I learned in the future. For now I sleep, dream of code, and show off all my work tomorrow. You did great future jake!

--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,7 @@ video.fullscreen {
 }
 
 .headshot {
+  /* used a grid for these images so that they are eventy spaced and easy to swap out if needed */
   display: grid;
 }
 
