--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,17 @@ h2 {
   font-weight: 800;
   font-size: 5rem;
   mix-blend-mode: luminosity;
+  @media (max-width:480px) {
+    font-size: 3rem;
 }
-
+}
 h3 {
   font-family: komet, sans-serif;
   font-weight: 400;
   font-size: 3rem;
+  @media (max-width:480px) {
+    font-size: 1rem;
+}
 }
 
 h4 {
@@ -117,6 +122,11 @@ video.fullscreen {
 	width: 100%;
 	background-color: #EBF4F4;
 	object-fit: cover;
+  @media (max-width:480px) {
+    top: 0;
+    right: 20rem;
+    width: 300%;
+  }
 }
 
 .me {
@@ -125,12 +135,16 @@ video.fullscreen {
   text-align: center;
   z-index: 3;
   animation: fadeIn 3s;
+  @media (max-width:480px) {
+    inset: 7rem;
+}
 }
 
 .me a {
   text-decoration: none;
   color: #1F2833;
 }
+
 
 .firstandlast, .designer {
   transition: 0.3s ease;
@@ -144,6 +158,7 @@ video.fullscreen {
   /* made a arrows into a grid so that they can be equadistant from each other */
   position: absolute;
   display: grid;
+  display: none;
   inset: 28rem 0rem 2rem 3rem;
   grid-template-columns: 1fr 1fr 1fr;
   height: 30rem;
@@ -362,6 +377,7 @@ margin-top: 19rem;
   height: 1.8rem;
   margin: 24.8rem 0 0 0;
   inset: 3rem;
+  display: none;
 }
 
 .crossword { 
@@ -430,6 +446,7 @@ margin-top: 19rem;
   transform: rotate(180deg);
   inset: 3rem;
   z-index: 2;
+  display: none;
 }
 
 .designwork { 
@@ -438,6 +455,9 @@ margin-top: 19rem;
   padding-top: 5rem;
   position: relative;
   overflow: hidden;
+  @media (max-width:480px) {
+  padding-top: 2rem;
+  }
 }
 
 .sandonside { 
@@ -476,6 +496,9 @@ margin-top: 19rem;
   position: relative;
   padding: 0 1.5rem;
   animation: fadeIn 1s;
+  @media (max-width:480px){
+    padding: 0rem 0rem;
+}
 }
 
 .carouselBottom {
@@ -529,6 +552,12 @@ margin-top: 19rem;
   height: 37.25rem;
   background-color: #1F2833;
   padding: 2.625rem;
+  @media (max-width:480px){
+  width: 25rem;
+  height: 18.625rem;
+  padding: 1.3125rem;
+  justify-content: flex-start;
+  }
 }
 
 .cardtitle {
@@ -537,6 +566,9 @@ margin-top: 19rem;
   height: 5rem;
   width: 100%;
   background-color: #1F2833;
+  @media (max-width:480px){
+    height: 2.5rem;
+    }
 }
 
 .cardtitle p {
@@ -548,6 +580,13 @@ margin-top: 19rem;
   font-family: komet-sc, sans-serif;
   font-size: 2.5rem;
   transition: 0.3s ease;
+  @media (max-width:480px){
+    font-size: 1rem;
+    justify-content: center;
+    margin-top: 0.05rem;
+    
+
+  }
 }
 
 .cardtitle p:hover {
@@ -568,6 +607,7 @@ margin-top: 19rem;
   position: absolute;
   top: 50%;
   cursor: pointer;
+  filter: drop-shadow(5px 2px 2px #ffffff);
 }
 
 /* CAROUSEL PREVIOUS ARROWS */
@@ -614,6 +654,10 @@ li.active {
   width: 44rem;
   height: 32rem;
   transition: 0.3s ease; /* added an ease to smooth out hover state */
+  @media (max-width:480px) {
+    width: 22rem;
+    height: 16rem;
+  }
 }
 
 .horizontalThumbnail:hover {
@@ -763,4 +807,26 @@ letter-spacing: .2rem;
   /* keyfames to tell animations to fade into view when the page loads */
   0% { opacity: 0; }
   100% { opacity: 1; }
+}
+
+/* Media Queries for TABLET */
+@media (max-width: 1223px) {
+  nav a {
+    color: red;
+  }
+}
+/* Media Queries for Mobile */
+@media (max-width:480px) {
+  body {
+    font-size: 1.2rem;
+  }
+  .header {
+    position: relative;
+  }
+  .nav ul {
+    column-gap: 4rem;
+  }
+  .nav a {
+    letter-spacing: 0;
+  }
 }
