--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,10 @@ h3 {
   font-weight: 400;
   font-size: 3rem;
   @media (max-width:480px) {
-    font-size: 1rem;
+    font-size: 1.5rem;
+}
+@media (max-width:768px){
+  font-size: 2rem;
 }
 }
 
@@ -55,6 +58,9 @@ h4 {
 
 /* LINKS */
 
+.processLink {
+  color: #1F2833;
+}
 a {
   color: #EBF4F4;
 }
@@ -116,6 +122,12 @@ a:focus {
 
 /* HOME PAGE CSS */
 
+.heroVideoContainer {
+  @media (max-width:480px) {
+  width: 430px;
+  overflow: hidden;
+  }
+}
 video.fullscreen {
   position: relative;
   top: 3.563rem;
@@ -123,9 +135,11 @@ video.fullscreen {
 	background-color: #EBF4F4;
 	object-fit: cover;
   @media (max-width:480px) {
-    top: 0;
+    top: 0rem;
     right: 20rem;
     width: 300%;
+    height: 45rem;
+    overflow: hidden;
   }
 }
 
@@ -136,7 +150,8 @@ video.fullscreen {
   z-index: 3;
   animation: fadeIn 3s;
   @media (max-width:480px) {
-    inset: 7rem;
+    inset: 2rem;
+    top: 20rem;
 }
 }
 
@@ -168,7 +183,8 @@ video.fullscreen {
   /* made my focus teal blue to match my design library */
   outline: solid #5BABA9;
 }
-
+.leftImage {
+}
 .leftArrow {
   width: 1.5rem;
   height: 1.5rem;
@@ -193,10 +209,16 @@ video.fullscreen {
   display: flex;
   background-color: #1F2833;
   width: 100%;
-  min-height: 44.0625rem;
+  min-height: 20rem;
   color: #EBF4F4;
   text-align: left;
   padding: 15rem;
+  @media (max-width:768px){
+    padding: 8rem;
+  }
+  @media (max-width:480px){
+    padding: 4rem;
+  }
 }
 
 .whyandhow {
@@ -206,11 +228,19 @@ video.fullscreen {
   background-color: #EBF4F4;
   width: 100%;
   min-height: 60rem;
+  @media (max-width:480px){
+    grid-template-columns: 0fr;
+    grid-template-rows: 1fr;
+  }
 }
 
 .whyandhow img {
   height: 65rem;
   width: 36.503rem;
+  @media (max-width:480px){
+    height: 48rem;
+    width: auto;
+  }
 }
 
 .headshot {
@@ -221,6 +251,12 @@ video.fullscreen {
 .tileStack {
   display: grid;
   margin: 8rem 10rem 5rem 6rem;
+  @media (max-width:480px) and (min-width: 375px) {
+  margin: 3rem 3rem 2.5rem 3rem;
+  } 
+  @media (max-width:375px){
+    margin: 3rem 5rem 2.5rem 3rem;
+    }
 }
 
 /* FORM ELEMENTS */
@@ -228,15 +264,22 @@ video.fullscreen {
 form {
   background-color: #1F2833;
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   text-align: left;
   padding: 10rem;
   color: #EBF4F4;
+  @media (max-width:480px){
+    padding: 3rem 10rem 0 10rem;
+  }
 }
 
 .formColumn h3 {
   width: 50.625rem;
+  @media (max-width:480px){
+  width: 20rem;
+  }
 }
 
 .formColumn ul {
@@ -246,6 +289,9 @@ form {
   font-weight: 400;
   font-size: 2.125rem;
   letter-spacing: 0.2rem;
+  @media (max-width:480px){
+    font-size: 1.25rem;
+  }
 }
 
 .formColumn a {
@@ -268,6 +314,10 @@ svg {
   top: .37rem;
   fill: #5BABA9;
   transition: 0.3s ease;
+  @media (max-width:480px){
+    height: 15px;
+    top: 0.13rem;
+  }
 }
 
 svg:hover { 
@@ -287,6 +337,9 @@ label {
   font-style: normal;
   font-weight: 600;
   letter-spacing: 0.375rem;
+  @media (max-width:480px){
+   font-size: 2rem;
+  }
 }
 
 input {
@@ -298,6 +351,10 @@ input {
   font-family: komet, sans-serif;
   font-size: 1.875rem;
   font-weight: 500;
+  @media (max-width:480px){
+    width: 100%;
+    font-size: 1.2rem;
+  }
 }
 
 textarea {
@@ -308,6 +365,10 @@ textarea {
   font-family: komet, sans-serif;
   font-size: 1.875rem;
   font-weight: 500;
+  @media (max-width:480px){
+    width:100% ;
+    font-size: 1.2rem;
+  }
 }
 
 .submit {
@@ -323,6 +384,9 @@ textarea {
   font-weight: 300;
   cursor: pointer;
   text-transform: uppercase;
+  @media (max-width:480px){
+    margin: .5rem 0rem .75rem 15rem;
+}
 }
 
 .submit:hover {
@@ -386,7 +450,11 @@ margin-top: 19rem;
   position: absolute;
   inset: 8rem;
   left: 10rem;
+  @media (max-width:480px) {
+    display: none
+    }
 }
+
 
 .terriblefate-mini {
   position: absolute;
@@ -394,13 +462,26 @@ margin-top: 19rem;
   height: 25rem;
   box-shadow: 3rem 3rem;
   margin-left: 14rem;
+  @media (max-width:480px) {
+    inset: 2rem;
+  height: 15rem;
+  box-shadow: 3rem 3rem;
+  margin-left: 0rem;
+  top: 5rem;
+  }
 }
 
 .auora {
   position: absolute;
   inset: 28rem;
   margin-left: 57.3rem;
-  box-shadow: #1F2833 3rem 3rem;
+  box-shadow:   3rem 3rem;
+  @media (max-width:480px) {
+    inset: 5rem;
+    top: 50rem;
+    margin-left: 10rem;
+    height: 25rem;
+  }
 }
 
 .screenprint {
@@ -409,6 +490,12 @@ margin-top: 19rem;
   margin-top: 31.5rem;
   left: 16rem;
   box-shadow: -3rem 3rem;
+  @media (max-width:480px) {
+  inset: 10rem;
+  margin-top: 15rem;
+  height: 20rem;
+  left: 10rem;
+}
 }
 
 /* PROCESS PINS */
@@ -418,6 +505,9 @@ margin-top: 19rem;
   inset: 9rem;
   margin-left: 31.5rem;
   height: 1.20rem;
+  @media (max-width:480px) {
+    display: none;
+  }
 }
 
 .auroraPin {
@@ -425,6 +515,9 @@ margin-top: 19rem;
   inset: 30rem;
   margin-left: 42rem;
   height: 1.20rem;
+  @media (max-width:480px) {
+    display: none;
+  }
 }
 
 .screenPin {
@@ -434,6 +527,9 @@ margin-top: 19rem;
   left: 20rem;
   transform: rotate(270deg);
   height: 1.20rem;
+  @media (max-width:480px) {
+    display: none;
+  }
 }
 
 /* DESIGN PAGE CSS */
@@ -553,10 +649,9 @@ margin-top: 19rem;
   background-color: #1F2833;
   padding: 2.625rem;
   @media (max-width:480px){
-  width: 25rem;
+  width: 26.875rem;
   height: 18.625rem;
   padding: 1.3125rem;
-  justify-content: flex-start;
   }
 }
 
@@ -584,8 +679,6 @@ margin-top: 19rem;
     font-size: 1rem;
     justify-content: center;
     margin-top: 0.05rem;
-    
-
   }
 }
 
@@ -607,7 +700,9 @@ margin-top: 19rem;
   position: absolute;
   top: 50%;
   cursor: pointer;
+  @media (max-width:480px){
   filter: drop-shadow(5px 2px 2px #ffffff);
+  }
 }
 
 /* CAROUSEL PREVIOUS ARROWS */
@@ -675,15 +770,16 @@ li.active {
   padding: 1rem;
   justify-content: center;
   height: 63rem;
+  @media (max-width:480px) {
+    display: grid;
+  height: auto;
+  }
 }
 
-.projectImage {
-  margin: 8rem 2.5rem 5rem 2.5rem;
-  height: 43rem;
-}
 
 .nextbar { 
   /* for future purposes this link will eventually take you to the next process or project page */
+  display: none; /*DEACTIVATED */
   position: absolute;
   inset: 55rem;
   color: #EBF4F4;
@@ -748,6 +844,10 @@ letter-spacing: .2rem;
   margin: 8rem 2.5rem 5rem 2.5rem;
   height: 43rem;
   animation: fadeIn 3s;
+  @media (max-width:480px) {
+    margin: 2rem 1rem 0rem 1rem;
+    height: 33rem;
+  }
 }
 
 .partofitGrid { /* grids for the project pages two represent the 2 case study paragraphs about the specific project */
@@ -756,16 +856,35 @@ letter-spacing: .2rem;
   grid-template-rows: 1fr;
   background-color: #EBF4F4;
   height: 50rem;
+  @media (max-width:480px) {
+    align-items: center;
+    height: auto;
+    width: 425px;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
 }
 
 .textContent {
   margin: 9.8rem;
   line-height: 2.8125rem;
+  @media (max-width:480px) {
+    margin: 3rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 .textContent2 {
   margin: 8rem;
   line-height: 2.8125rem;
+  @media (max-width:480px) {
+    margin: 3rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 .candlelightGrid {
@@ -774,10 +893,23 @@ letter-spacing: .2rem;
   grid-template-rows: 1fr;
   background-color: #EBF4F4;
   height: 50rem;
+  @media (max-width:480px) {
+    align-items: center;
+    display: grid;
+    height: auto;
+    grid-template-columns: 1fr;
+    width: 425px;
+    overflow: hidden;
+  }
 }
 
 .zoomed {
   height: 50rem;
+  @media (max-width:480px) {
+  display: flex;
+  height: auto;
+  width: 425px;
+}
 }
 
 /* CONFIRMATION PAGE */
